[package]
name = "learn-opengl-rs"
version = "0.1.0"
authors = ["Manish Mathai <manishpmathai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.39.0"
gl = "0.14.0"
image = "0.23.7"
nalgebra-glm = "0.7.0"